--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,7 +48,6 @@ h1 {
     color: #E65E2F;
     font-size: 65px;
     margin: auto;
-    text-decoration: dashed;
 }
 
 p {
@@ -58,6 +57,14 @@ p {
     color: #1A1917;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+h2 {
+    text-align: center;
+    font-family: "Playfair Display", serif;
+    color: #E65E2F;
+    font-size: 15px;
+    margin-bottom: 50px;
 }
 
 
@@ -102,6 +109,10 @@ div {
    
 }
 
+div :hover img {
+    transform: translate(5px, -5px);
+    border: dashed 1.5px #E65E2F;
+}
 
 img, video {
     width: 100%;
